--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "firebase": "^7.10.0",
     "ionicons": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -43,5 +44,8 @@
       "last 1 safari version"
     ]
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "devDependencies": {
+    "@types/firebase": "^3.2.1"
+  }
 }
