--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "ionicons": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
     "typescript": "3.7.4"
   },
   "scripts": {
@@ -46,6 +48,7 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
-    "@types/firebase": "^3.2.1"
+    "@types/firebase": "^3.2.1",
+    "@types/react-redux": "^7.1.7"
   }
 }
