--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "description": "An Ionic project",
   "devDependencies": {
     "@types/firebase": "^3.2.1",
-    "@types/react-redux": "^7.1.9"
+    "@types/react-redux": "^7.1.9",
+    "eslint-plugin-react": "^7.23.2"
   }
 }
