dependencies & readme updated, new firebase auth code

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,3 +1,14 @@
 {
-	"extends": ["plugin:react/recommended"]
+	"extends": ["plugin:react/recommended"],
+	"parserOptions": {
+		"ecmaVersion": 6,
+		"sourceType": "module",
+		"ecmaFeatures": {
+			"jsx": true
+		}
+	},
+	"rules": {
+		"semi": "error",
+    "no-redeclare": 0
+	}
 }
